<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VitalTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="gps">GPS</string>
    <string name="vitals">Vitals</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vitaltracker">VitalTracker</string>
    <string name="splashlogo">Splash Logo</string>
    <string name="confirmexit">Confirm Exit</string>
    <string name="areyousure">Do you really want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="config">Config</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="location">Home Location</string>
    <string name="location2">Home \nLocation</string>
    <string name="hint">Enter home address</string>
    <string name="apply">Apply</string>
    <string name="current">Current Home: </string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="changepass">Change Password</string>
    <string name="newpass">Enter new password</string>
    <string name="lock">Lock Screen to Portrait Mode</string>
    <string name="map_api_key" tools:ignore="Typos">AIzaSyCwr1NKUl7n7fGvrdVFW_H2pXYPMgp2dqc</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="mylocation">My Location</string>
    <string name="granted">Location permission granted</string>
    <string name="denied">Location permission denied</string>
    <string name="turn_off_notifications">Notifications:</string>
    <string name="restore">Restore \nDefault</string>
    <string name="feature">Feature</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="set_home_location">Set home location</string>
    <string name="user_input">User Input</string>
    <string name="lock_orientation">Lock \nOrientation</string>
    <string name="prevent_screen_rotation">Prevent screen \nrotation</string>
    <string name="on_off">On/Off</string>
    <string name="notification_toggle">Notification Toggle</string>
    <string name="handle_notifications">Handle Notifications</string>
    <string name="reset">Reset settings to \ndefault</string>
    <string name="button_input">Button Input</string>
    <string name="configurations">Configurations</string>
    <string name="email_is_verified">Email is Verified</string>
    <string name="email_is_not_verified">Email is not Verified</string>
    <string name="options">Options</string>
    <string name="feedback">Feedback</string>
    <string name="rating">Give us a rating!</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit Feedback</string>
    <string name="review">Tell us how we did!</string>
    <string name="gps_history">GPS History</string>
    <string name="device">Device</string>
    <string name="select_date">Select Date</string>
    <string name="back">Back</string>
    <string name="select_time">Select Time</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="deviceinfo">Device Information</string>
    <string name="add_to_map">Add to Map</string>
    <string name="clear_markers">Clear Markers</string>
</resources>