<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_main_drawer_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        />

    <item
        android:id="@+id/activity_main_drawer_home"
        android:icon="@mipmap/app_logo_foreground"
        android:title="@string/home" />

    <item
        android:id="@+id/activity_main_drawer_gps"
        android:icon="@drawable/ic_gps"
        android:title="@string/gps" />

    <item
        android:id="@+id/activity_main_drawer_vitals"
        android:icon="@drawable/ic_vitals"
        android:title="@string/vitals" />

    <item
        android:id="@+id/navigation_device"
        android:icon="@drawable/ic_baseline_devices_24"
        android:title="Device" />


</menu>