<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="@color/ashGreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/settingstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="122dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="123dp"
            android:layout_marginBottom="639dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="53dp"
            android:layout_height="62dp"
            android:layout_marginStart="179dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="179dp"
            android:layout_marginBottom="566dp"
            android:src="@mipmap/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginTop="185dp"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="527dp"
            android:text="@string/location"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationlayout"
            android:layout_width="218dp"
            android:layout_height="56dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="471dp"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="267dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="416dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="387dp"
            android:text="@string/current"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="363dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="349dp"
            android:text="@string/lock"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/lockswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="382dp"
            android:layout_marginEnd="173dp"
            android:layout_marginBottom="301dp"
            android:minHeight="48dp"
            android:text="@string/off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginTop="455dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="257dp"
            android:text="@string/turn_off_notifications"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/notifswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="474dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="209dp"
            android:minHeight="48dp"
            android:text="@string/on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="546dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="137dp"
            android:text="@string/restore"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>