<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFragment"
    android:background="@color/ashGreen">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="650dp"
            android:text="@string/feedback"
            android:textSize="30sp"
            android:fontFamily="@font/roboto_black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            tools:visibility="visible" />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="538dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="97dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="615dp"
            android:text="@string/rating"
            android:fontFamily="@font/roboto_black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="461dp"
            android:hint="@string/firstname"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="297dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="392dp"
            android:hint="@string/lastname"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="368dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="321dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="438dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="251dp"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="350dp"
            android:layout_height="87dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="518dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="126dp"
            android:hint="@string/comments"
            android:inputType="textMultiLine"
            android:minLines="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="118dp"
            android:layout_marginTop="624dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="59dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/howwedid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="512dp"
            android:text="@string/review"
            android:fontFamily="@font/roboto_black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>